# OptixRayTracer

./: .gitmodules  README.md
SDK/: CMakeLists.txt
SDK/CMake/: Macros.cmake
SDK/cuda/: triangle_mesh.cu
SDK/optixProject/: CMakeLists.txt  cudaFile.cu  nordvalla.weave  optixProject.cpp  optixProject.h
SDK/optixProject/data/: 34697.wif  8736.wif  Photo-studio-with-umbrella.hdr  chair.mtl  cloth.mtl  cloth_on_chair.mtl  floor.mtl  nordvalla.weave
SDK/simpleAnimation/: diningroom.mtl  simpleAnimation.cpp
SDK/sutil/: CMakeLists.txt  GLUTDisplay.cpp  GLUTDisplay.h  HostMesh.h  ImageLoader.cpp  ImageLoader.h  MeshBase.cpp  MeshBase.h  MeshScene.cpp  MeshScene.h  Mouse.cpp  Mouse.h  ObjLoader.cpp  ObjLoader.h  OptiXMesh.cpp  OptiXMesh.h  OptiXMeshImpl.cpp  PPMLoader.cpp  PPMLoader.h  SampleScene.cpp  SampleScene.h  SunSky.h  VCAOptions.h
